--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <img src="1.jpg" class="img-thumbnail" style="width:400px; height:500px;"/> <br>
         <button class="btn btn-primary" type="button"> Like </button>
       </div>
+      <div class="col-6">
+        <img src="2.jpg" class="img-thumbnail" style="width:400px; height:500px;"/> <br>
+        <button class="btn btn-primary" type="button"> Like </button>
+      </div>
     </div>
   </div>
  
