--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="row">
       <div class="col-6">
-        <img src="1.jpg" class="img-thumbnail" style="width:400px; height:500px;"/> <br>
+        <img src="IMG20240516150313.jpg" class="img-thumbnail" style="width:400px; height:500px;"/> <br>
         <button class="btn btn-primary" type="button"> Like </button>
       </div>
       <div class="col-6">
