--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button class="btn btn-primary" type="button"> Like </button>
       </div>
       <div class="col-6">
-        <img src="2.jpg" class="img-thumbnail" style="width:400px; height:500px;"/> <br>
+        <img src="IMG20240517160233.jpg" class="img-thumbnail" style="width:400px; height:500px;"/> <br>
         <button class="btn btn-primary" type="button"> Like </button>
       </div>
     </div>
