--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
   <div class="row">
     <div class="col-4">
       <img src="IMG20240517160233.jpg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
-      <button class="btn btn-primary" type="button" id="btnLike1">Like</button>
+      <button class="btn btn-primary" type="button" id="btnLike1">👍</button>
       <output id="countLike1">0</output>
-      <button class="btn btn-danger" type="button" id="btnDislike1">Dislike</button>
+      <button class="btn btn-danger" type="button" id="btnDislike1">D👎/button>
       <output id="countDislike1">0</output> 
     </div>
     
     <div class="col-4">
       <img src="IMG20240516150313.jpg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
-      <button class="btn btn-primary" type="button" id="btnLike2">Like</button>
+      <button class="btn btn-primary" type="button" id="btnLike2">👍</button>
       <output id="countLike2">0</output>
-      <button class="btn btn-danger" type="button" id="btnDislike2">Dislike</button>
+      <button class="btn btn-danger" type="button" id="btnDislike2">👎</button>
       <output id="countDislike2">0</output>
     </div>
     
     <div class="col-4">
       Comments <br>
       <input type="text" class="form-control" id="comment"/>
-      <button class="btn btn-success" id="submit">Submit</button>
+      <button class="btn btn-success" id="submit">💬</button>
       <br>
       <textarea class="form-control" id="commentbox" rows="30"></textarea>
     </div>
