--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="IMG20240517160233.jpg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
       <button class="btn btn-primary" type="button" id="btnLike1">👍</button>
       <output id="countLike1">0</output>
-      <button class="btn btn-danger" type="button" id="btnDislike1">D👎/button>
+      <button class="btn btn-danger" type="button" id="btnDislike1">👎</button>
       <output id="countDislike1">0</output> 
     </div>
     
