--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="header-contact-box" style="margin-right: 67em;">
                           <ul class="list-inline" style="margin-right: 10px;">
                             <li style="margin-right: 4.5em;">
-                              <img src="images/phone.png" alt="" style="width: 20px;">
+                              <img src="images/phone.png" alt="" style="width: 16px;">
                                   <i class="demo-icon icon-phone"></i>
                                 <span style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; color: white;">(02) 737.783</span>
                               </li>
@@ -86,6 +86,7 @@
                     <img src="images/nonagon.png" alt="nonagon logo" style="width: 100px;">
                     <h2 style="color: rgb(255, 255, 255); font-family: 'Times New Roman', Times, serif; font-weight: bold; margin-top: 20px; font-size: 40px">NONAGON</h2>
                     <h2 style="color: rgb(255, 255, 255); font-family: CMG Sans; margin-top: 5px; font-size: 25px; padding-bottom: 20px;">Computer Much Superstore</h2>
+                    <h2 style="color: rgb(255, 255, 255); font-family: CMG Sans; margin-top: 5px; font-size: 20px; padding-bottom: 20px;">Joshua Bautista BSIT 3-B</h2>
                     <hr class="hr" />
                     
                 </div>
